# dna-traits

./: .gitignore  CMakeLists.txt  LICENSES  Makefile  README.md  TODO  build-make.sh  build-ninja.sh  dna.cpp  read.cpp  test  test.cpp
dnatraits/: CMakeLists.txt  Makefile
dnatraits/include/: dnatraits.hpp
dnatraits/src/: dnatraits.cpp  file.hpp  fileptr.cpp  fileptr.hpp  filesize.cpp  filesize.hpp  mmap.hpp  parse_file.cpp
dnatraits/test/: test1.cpp
include/: dna.h  dnatraits.hpp  file.h  file.hpp  fileptr.h  fileptr.hpp  filesize.h  mmap.h  mmap.hpp
py-dnatraits/: CMakeLists.txt  Makefile  README.md  bench.py  bone-strength.py  dna_traits.py  runtest.sh  test_dna_traits.py
py-dnatraits/dna_traits/: __init__.py  conditions.py  fallback.py  genome.py  health.py  match.py  nucleotide.py  odds.py  parse.py  snp.py  traits.py  util.py
py-dnatraits/dna_traits/reports/: __init__.py  bone_strength.py  popular.py  skin.py
py-dnatraits/src/: Makefile  dna_traits.cpp  genome.cpp  genome.hpp
py-dnatraits/test/: bench-iterator.py  bench.py  test_dna_traits.py  test_odds.py
python/: Makefile  README.md  bench-binary.py  bench.py  bone-strength.py  dna_traits.cpp  dna_traits.py  genome.cpp  genome.h  genome.hpp  genopairs.py  profile.py  repl  similarity  snpedia-popular.py  test_dna_traits.py
src/: dna.cpp  dnatraits.cpp  file.cpp  fileptr.cpp  filesize.cpp  filesize.hpp  mmap.cpp  parse_file.cpp  summary.cpp
test/: test1  test1.cpp
util/: genofreq.sh  genopairs.py  rsids.sh
